--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <header class="header">
     <div class="container">
-      <h1 class="logo">Çukurova Manav</h1>
+      <h1 class="logo">Çukurova Manav Dükkanı</h1>
       <nav>
         <a href="admin.html">Admin</a>
       </nav>
