--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="category-cards">
           <div class="category-card" data-category="meyve">
             <div class="category-card-image">
-              <img src="https://placehold.co/600x400/FF6B6B/ffffff?text=Meyveler" alt="Meyveler">
+              <img src="https://media.istockphoto.com/id/529664572/tr/foto%C4%9Fraf/fruit-background.jpg?s=612x612&w=0&k=20&c=DrXMV_U4FOOT4nHHJE5cHDLjY1YBs6Yj288r-qFXX5w=" alt="Meyveler">
             </div>
             <div class="category-card-content">
               <h2>Meyveler</h2>
@@ -33,7 +33,7 @@
           
           <div class="category-card" data-category="sebze">
             <div class="category-card-image">
-              <img src="https://placehold.co/600x400/51CF66/ffffff?text=Sebzeler" alt="Sebzeler">
+              <img src="https://media.istockphoto.com/id/1409236261/tr/foto%C4%9Fraf/healthy-food-healthy-eating-background-fruit-vegetable-berry-vegetarian-eating-superfood.jpg?s=612x612&w=0&k=20&c=0lOCt4Pr-5wnHpigsom8sppyiHm99NpdB8xbooqV0Wg=" alt="Sebzeler">
             </div>
             <div class="category-card-content">
               <h2>Sebzeler</h2>
